# reading-liner

./: Cargo.toml  README.md
src/: index.rs  lib.rs  location.rs  stream.rs
src/stream/: alias.rs  mod.rs  stream.rs
tests/: check.rs  xiao_yao_you.txt
